--- a/python-programming.slides.html
+++ b/python-programming.slides.html
@@ -14167,7 +14167,7 @@ name[1] # a</code></pre>
 <h1 id="Variables">Variables<a class="anchor-link" href="#Variables">&#182;</a></h1><h2 id="Assign-variables-with-equals">Assign variables with equals<a class="anchor-link" href="#Assign-variables-with-equals">&#182;</a></h2>
 <pre><code>x=3</code></pre>
 <h2 id="Access-variables-by-name">Access variables by name<a class="anchor-link" href="#Access-variables-by-name">&#182;</a></h2>
-<pre><code>print x # 3</code></pre>
+<pre><code>print(x) # 3</code></pre>
 <h2 id="Variables-work-like-sticky-notes,-they%E2%80%99re-just-a-label">Variables work like sticky notes, they&#8217;re just a label<a class="anchor-link" href="#Variables-work-like-sticky-notes,-they%E2%80%99re-just-a-label">&#182;</a></h2>
 </div>
 </div></section></section><section><section>
@@ -14241,13 +14241,13 @@ counts[0] = 3 # now 3</code></pre>
 <h1 id="Conditionals">Conditionals<a class="anchor-link" href="#Conditionals">&#182;</a></h1>
 <pre><code># Test c1 for True or False
 if c1:
-    print "c1 was True"
+    print("c1 was True")
 # c1 was False, check c2
 elif c2:
-    print "c1 False but c2 True"
+    print("c1 False but c2 True")
 # All checks False
 else:
-    print "Both False"</code></pre>
+    print("Both False")</code></pre>
 
 </div>
 </div></section></section><section><section>
@@ -14317,7 +14317,7 @@ print(r)</code></pre>
 </li>
 <li>Loop over lines, and <code>strip()</code> each one
 <pre><code>for line in f:
-  print line.strip()</code></pre>
+  print(line.strip())</code></pre>
 </li>
 <li>Close with <code>f.close()</code></li>
 </ul>
@@ -14332,8 +14332,8 @@ print(r)</code></pre>
 </ul>
 
 <pre><code>import sys
-print sys.argv[0]
-print sys.argv[1]</code></pre>
+print(sys.argv[0])
+print(sys.argv[1])</code></pre>
 
 <pre><code>$ python script.py hello
 script.py
@@ -14343,6 +14343,20 @@ hello</code></pre>
 </ul>
 
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
 </div></section></section>
 </div>
 </div>
